<resources>
    <string name="app_name">Candor</string>



    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyB4Ko-y_DKermsz7csL4MNXo7voJaauAHw</string>



    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>



    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>


    <string name="kotokhani"> পানির  আনুমানিক উচ্চতা  কত?</string>
    <string name="gorali"> গোড়ালি পর্যন্ত </string>
    <string name="hatu"> হাঁটু পর্যন্ত </string>
    <string name="komor"> কোমর পর্যন্ত </string>





    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="need_a_new_account">need a new account?</string>
    <string name="password">password</string>
    <string name="register">Register!</string>
    <string name="email">email</string>
    <string name="display_name">Display Name</string>
    <string name="sign_out">sign out</string>
    <string name="account_settings">account settings</string>
    <string name="all_users">all users</string>
    <string name="create_an_account">Create an account !</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login">login</string>
    <string name="provide_email_and_password">provide email and password</string>
    <string name="have_an_account">have an account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_status">Change Status</string>
    <string name="change_image">Change Image</string>
    <string name="status">status</string>
    <string name="profil_e_name">Profile Name</string>
    <string name="your_status">your status</string>
    <string name="save">save</string>

    <string name="user_status">user status</string>
    <string name="total_friends">total friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="dusplay_name">Dusplay Name</string>
    <string name="last_seen">last_seen</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">a minitue ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="simgle_message">Simgle message</string>
    <string name="profile_name">Profile Name</string>
    <string name="time">time</string>
    <string name="hate_this">hate this</string>
    <string name="love_this">love this</string>
    <string name="caption">caption</string>
    <string name="time_and_dates">time and date</string>
    <string name="name">name</string>
    <string name="post">post</string>
    <string name="please_fix_this_problem">please fix this problem :)</string>
    <string name="date">20 jan , 2017</string>
    <string name="in_news">Today is a great day in this day i became the most awesome man in the history of mankind</string>
    <string name="mohammad_faisal">Mohammad Faisal</string>
    <string name="recent_news">name</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone number</string>




    <string name="motivationtalk">
    Water is a very important asset in our life. Just as pure water can save our lives, the contaminated water can stand a threat to our lives.Water plays an important role in maintaining the balance of the environment. But we are constantly polluting our environment due to some of our habits. As it spreads like water borne diseases, so is the imbalance of the environment and the creation of water logging.Due to not taking the dirt of the garbage, packets of chips, Banana peels
 at the right place, these dirt mixing into water in different ways creates water logging . If we can develop this practice of putting the waste garbage in the right place, we will be able to eliminate the problem of water logging in most of the cases.
With this purpose we have created this game.The main goal of which is to put waste garbage in the right place so that we can keep our environment clean by changing our habits and can get rid of water logging.
    </string>
</resources>
