<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.candor.candor.initialize.RegisterActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/app_tool_bar"
        ></include>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:background="?android:attr/colorControlActivated"
        android:text="@string/login" />

    <EditText
        android:id="@+id/email_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_an_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email_text_login"
        android:layout_below="@+id/email_text_login"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/provide_email_and_password"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
