<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:text="@string/kotokhani"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio"
        android:layout_below="@id/dialog_info"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/r1"
                android:text="@string/gorali"
                android:layout_weight="80"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_marker1"
                android:layout_weight="20"
                android:layout_marginRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/r2"
                android:text="@string/hatu"
                android:layout_weight="80"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_marker0"
                android:layout_weight="20"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/r3"
                android:text="@string/komor"
                android:layout_weight="80"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_marker2"
                android:layout_weight="20"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/r4"
                android:text="নিশ্চিত নয় "
                android:layout_weight="80"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_markerdefault"
                android:layout_weight="20"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>








    </RadioGroup>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/radio">


        <Button
            android:fontFamily="@font/averia_libre"
            android:id="@+id/dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/White"
            android:background="@color/Black"
            android:text="Ok"/>


    </LinearLayout>


</RelativeLayout>